--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,33 @@ body {
     display: grid;
     grid-template-rows: max-content 1fr max-content;
 }
+
+
+/* Header */
+
+header{
+    font-size: 2rem;
+    color: var(--color-text-color-secondary);
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    border-bottom: 1px solid var(--color-stroke-color);
+    padding: 2.4rem 3.2rem;
+}
+
+
+/* Main */
+
+main {
+    padding: 3.2rem;
+}
+
+
+/* Footer */
+
+footer {
+    padding: 3.2rem;
+    border-top: 1px solid var(--color-stroke-color);
+}
