--- a/css/styles.css
+++ b/css/styles.css
@@ -73,3 +73,37 @@ footer {
     padding: 3.2rem;
     border-top: 1px solid var(--color-stroke-color);
 }
+
+.total {
+    display: flex;
+    justify-content: space-between;
+
+    font-size: 2rem;
+}
+
+.cupon {
+    margin-top: 1.6rem;
+    color: var(--color-brand-color-light);
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: .8rem;
+}
+
+.cupon i {
+    font-size: 2rem;
+}
+
+button {
+    margin-top: 3.2rem;
+
+    background-color: var(--color-brand-color);
+    color: var(--color-text-color-primary);
+
+    border: 0;
+    font-size: 2rem;
+    padding-block: 2rem;
+    width: 100%;
+    border-radius: .8rem;
+}
