--- a/css/styles.css
+++ b/css/styles.css
@@ -106,4 +106,10 @@ button {
     padding-block: 2rem;
     width: 100%;
     border-radius: .8rem;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: var(--color-brand-color-light);
 }
