--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,24 @@ header{
 
 main {
     padding: 3.2rem;
+
+    display: grid;
+}
+
+.item {
+    display: flex;
+    gap: 2.4rem;
+}
+
+.item img {
+    width: 10.4rem;
+    height: 10.4rem;
+    object-fit: cover;
+    border-radius: .8rem;
+}
+
+.item .title {
+    color: var(--color-text-color-secondary);
 }
 
 
@@ -95,7 +113,7 @@ footer {
     font-size: 2rem;
 }
 
-button {
+footer button {
     margin-top: 3.2rem;
 
     background-color: var(--color-brand-color);
@@ -110,6 +128,6 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+footer button:hover {
     background-color: var(--color-brand-color-light);
 }
