--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,23 @@ main {
     padding: 3.2rem;
 
     display: grid;
+    gap: 4.8rem;
+    place-content: start;
+
+    overflow-y: scroll;
 }
 
+::-webkit-scrollbar {
+    width: .6rem;
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-stroke-color);
+    border-radius: .8rem;
+}
+::webkit-scrollbar-track {
+    background-color: var(--color-background-color);
+
+}
 .item {
     display: flex;
     gap: 2.4rem;
@@ -84,6 +99,58 @@ main {
     color: var(--color-text-color-secondary);
 }
 
+.price-qty {
+    margin-top: 1.6rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.price {
+    font-weight: 700;
+}
+
+.qty {
+    display: flex;
+    align-items: center;
+}
+
+.qty span,
+.qty button {
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 0;
+}
+
+.qty button {
+    border-radius: .8rem;
+    border: 1px solid #fff;
+    background-color: transparent;
+    color: var(--color-brand-color-light);
+    font-size: 1.6rem;
+    cursor: pointer;
+}
+
+.qty button.add {
+    border-color: var(--color-brand-color-light);
+}
+
+.qty button.add:hover {
+    background-color: var(--color-brand-color-lighter);
+    color: var(--color-stroke-color);
+}
+
+.qty button.sub{
+    border-color: var(--color-stroke-color);
+}
+.qty button.sub:hover {
+    color: var(--color-text-color-primary);
+    border-color: var(--color-brand-color-light);
+}
 
 /* Footer */
 
